--- a/mult_arq/main.tex
+++ b/mult_arq/main.tex
@@ -21,7 +21,7 @@
 	\newpage
 	
 	\section{Introdução}
-	\input{intro}
+	\input{intro} %adciona texto do arquivo intro.tex
 	\newpage
 	
 	\section{Desenvolvimento}
