--- a/article/first-doc.tex
+++ b/article/first-doc.tex
@@ -23,6 +23,7 @@
 \usepackage{natbib} %Este pacote adciona opções de citações
 \usepackage{multicol} %Este pacote adciona colunas personalizadas
 \usepackage[perpage]{footmisc} %Este pacote reseta contagem de rodapé por página
+\usepackage{csquotes} 
 
 %%&&&&&&&&&&&&&&&&
 %%	PARÂMETROS  &&
@@ -517,6 +518,29 @@
 			
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.\footnote{Esta é outra nota de rodapé 1} Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\footnote{Esta é outra nota de rodapé 2}
 			
+		\newpage
+		
+	\section{Estudo citações}
+		Ac turpis egestas sed tempus urna et pharetra pharetra. Sit amet nisl purus in. At quis risus sed vulputate odio ut. Placerat duis ultricies lacus sed turpis tincidunt id aliquet. Quis vel eros donec ac odio tempor orci dapibus. Sit amet mattis vulputate enim nulla aliquet porttitor lacus luctus. Ornare suspendisse sed nisi lacus sed viverra tellus. Aliquet nibh praesent tristique magna sit amet purus gravida. Risus at ultrices mi tempus. Eu sem integer vitae justo eget magna. Diam ut venenatis tellus in metus vulputate eu scelerisque felis. Nunc sed augue lacus viverra vitae. Quis eleifend quam adipiscing vitae proin. \enquote{UMA CITAÇÃO FEITA NO TEXTO.}. Scelerisque in dictum non consectetur a erat nam. Senectus et netus et malesuada fames ac turpis egestas. Id faucibus nisl tincidunt eget nullam. Scelerisque viverra mauris in aliquam sem fringilla ut. \footnote{Esta é outra nota de rodapé}
+		
+		\subsection{Título subseção}
+			Volutpat commodo sed egestas egestas fringilla phasellus. Sit amet nisl suscipit adipiscing bibendum est ultricies integer. Blandit libero volutpat sed cras ornare arcu dui vivamus arcu. Facilisis gravida neque convallis a cras semper. Venenatis a condimentum vitae sapien pellentesque habitant. Proin nibh nisl condimentum id venenatis a condimentum. Aliquam sem et tortor consequat id porta nibh. Semper feugiat nibh sed pulvinar. Mi eget mauris pharetra et. \footnote{Esta é outra nota de rodapé com contagem NORMAL}
+			
+			\begin{quote}
+				ESTA É UMA CITAÇÃO CURTA
+			\end{quote}
+			
+			\begin{quotation}
+				\textbf{ESTA JÁ É UMA CITAÇÃO LONGA.} Placerat vestibulum lectus mauris ultrices eros in. Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. Convallis aenean et tortor at risus. Aliquet bibendum enim facilisis gravida neque convallis a. 
+				
+				Pharetra massa massa ultricies mi quis hendrerit dolor magna. Sapien et ligula ullamcorper malesuada proin.\footnote[516]{Esta é outra nota de rodapé com contagem zuada}
+			\end{quotation}
+		
+			\subsubsection{Título de subsubseção}
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. ``Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+				
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.\footnote{Esta é outra nota de rodapé 1} Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\footnote{Esta é outra nota de rodapé 2}
+				
 		\newpage
 	%Adciona bibliografia ao sumário
 	\addcontentsline{toc}{section}{Referências} % toc (TableOfContents), section (hierarquia), Referências (nome no sumário)
